--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.card {
+  display: flex;
+  justify-content: center;
+  margin: 2% auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
