--- a/src/components/pokemonInfo.css
+++ b/src/components/pokemonInfo.css
@@ -7,4 +7,6 @@
   border-radius: 10px;
   justify-content: center;
   padding: 10px;
+  background-color: rgb(75, 106, 190);
+  line-height: 30px;
 }
