--- a/src/css/pokemonInfo.css
+++ b/src/css/pokemonInfo.css
@@ -7,7 +7,7 @@
   padding: 1vw 0;
   background-color: rgb(75, 106, 190);
   line-height: 30px;
-  width: 80%;
+  width: 70%;
 }
 
 #selectedPokemon {
@@ -16,6 +16,7 @@
 }
 
 .card-selected {
+  color: rgb(248, 165, 11);
   padding: 15px;
   display: flex;
   flex-flow: nowrap column;
@@ -23,8 +24,9 @@
 }
 
 .card-selected-text {
-  padding: 2vw 2vw;
+  padding: 2vh 2vh;
   font-size: 20px;
   font-weight: 600;
   min-width: 55%;
+  color: white;
 }
